--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple proxy for students to make JSON requests",
   "main": "server.js",
   "dependencies": {
-    "request": "^2.65.0"
+    "request": "^2.65.0",
+    "xml2json": "^0.9.0"
   },
   "devDependencies": {},
   "scripts": {
