--- a/package.json
+++ b/package.json
@@ -4,10 +4,23 @@
   "description": "Simple proxy for students to make JSON requests",
   "main": "server.js",
   "dependencies": {
+    "express": "^4.14.0",
+    "gulp": "^3.9.1",
+    "mongoose": "^4.7.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
     "request": "^2.65.0",
     "xml2json": "^0.9.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
