--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple proxy for students to make JSON requests",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --watch",
+    "test": "mocha --watch test/",
     "start": "node server.js"
   },
   "dependencies": {
@@ -25,8 +25,7 @@
     "browserify": "^13.1.1",
     "expect.js": "^0.3.1",
     "mocha": "^3.4.2",
-    "mongoose": "^4.9.1",
-    "supertest": "^3.0.0",
+    "superagent": "^3.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
