--- a/circle.yml
+++ b/circle.yml
@@ -9,3 +9,4 @@ dependencies:
     - sudo apt-get update
     - sudo apt-get install -y mongodb-org
     - sudo service mongod restart
+    - sudo npm install
