--- a/circle.yml
+++ b/circle.yml
@@ -1,12 +1,7 @@
 machine:
   node:
     version: 8.0.0
-dependencies:
-  override:
-    - sudo apt-get purge mongodb-org*
-    - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10
-    - echo "deb http://repo.mongodb.org/apt/ubuntu precise/mongodb-org/3.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.0.list
-    - sudo apt-get update
-    - sudo apt-get install -y mongodb-org
-    - sudo service mongod restart
-    - sudo npm install
+test:
+  pre:
+    - node server.js:
+        background: true
