--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "express": "^4.14.0",
-    "mongoose": "^4.7.0",
-    "request": "^2.65.0",
-    "xml2json": "^0.9.0"
+    "express": "^4.17.1",
+    "mongoose": "^5.12.3",
+    "request": "^2.88.2",
+    "xml2json": "^0.12.0"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
-    "mocha": "^3.4.2",
-    "superagent": "^3.5.2",
+    "mocha": "^8.3.2",
+    "superagent": "^6.1.0"
   },
   "author": "Ryan Christiani",
   "license": "ISC"
