--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,29 @@ orbs:
 
 version: 2.1
 
+jobs:
+  test:
+    docker:
+      - image: circleci/mongo:latest
+    steps:
+      - checkout
+      - run:
+          name: Waiting for MongoDB to be ready
+          command: |
+            for i in `seq 1 10`;
+            do
+              nc -z 127.0.0.1 27017 && echo Success && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for MongoDB && exit 1
+      - run:
+          name: Install dependancies
+          command: npm install
+      - run:
+          name: Run tests
+          command: npm run test
+
 workflows:
   app-tests:
     jobs:
