--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,14 +11,7 @@ jobs:
       - checkout
       - run:
           name: Waiting for MongoDB to be ready
-          command: |
-            for i in `seq 1 10`;
-            do
-              nc -z 127.0.0.1 27017 && echo Success && exit 0
-              echo -n .
-              sleep 1
-            done
-            echo Failed waiting for MongoDB && exit 1
+          command: dockerize -wait tcp://localhost:27017 -timeout 2m
       - run:
           name: Install dependancies
           command: npm install
