Updating tests again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,23 @@
+version: '2.1'
 orbs:
   node: circleci/node@4.7.0
-
-version: 2.1
-
 jobs:
-  test:
+  run-tests:
     docker:
-      - image: circleci/mongo:latest
-    executor:
-      name: node/default
+      - image: 'cimg/base:stable'
+      - image: circleci/mongo:5.0
+        command: [mongod]
     steps:
       - checkout
-      - run:
-          name: install dockerize
-          command: curl -O https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
-          environment:
-            DOCKERIZE_VERSION: v0.3.0
+      - node/install:
+          install-yarn: true
       - run:
           name: Wait for MongoDB
           command: dockerize -wait tcp://localhost:27017 -timeout 2m
-      - run: node/install-packages
+      - node/install-packages
       - run:
-          name: Run tests
           command: npm run test
-
 workflows:
-  app-tests:
+  test_json_proxy:
     jobs:
-      - test
+      - run-tests
